[package]
name = "rscolorsortgame"
version = "0.1.0"
authors = ["Alexander Sagen <alexander@sagen.me>"]
edition = "2018"

[dependencies]
ggez = "^0.5"
winit = "^0.19"

gfx_core = "^0.9"
gfx_device_gl = "^0.16"

imgui = "^0.7"
imgui-gfx-renderer = "^0.7"

rand = { version = "^0.8", features = ["small_rng"] }